<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_written_added"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="25dp"
    android:layout_marginEnd="25dp"
    android:layout_marginBottom="12dp"
    app:cardElevation="8dp"
    app:cardPreventCornerOverlap="false"
    app:contentPadding="8dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_written_added"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView android:id="@+id/recipe_image_written_added"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="10dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:0.5"
            app:layout_constraintWidth_percent=".923"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:contentDescription="@string/recipeImagePlaceholder"
            app:layout_constraintBottom_toTopOf="@+id/recipe_title_written_added"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/recipe_title_written_added"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Recipe Title"
            app:layout_constraintTop_toBottomOf="@id/recipe_image_written_added"
            app:layout_constraintBottom_toTopOf="@id/recipe_divider_written_added"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="13dp"
            android:paddingTop="2dp"
            android:fontFamily="@font/amatic_sc_bold"
            android:textSize="24sp"
            android:gravity="center"
            />

        <View
            android:id="@+id/recipe_divider_written_added"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@android:color/darker_gray"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="13dp"
            android:paddingTop="2dp"
            app:layout_constraintTop_toBottomOf="@id/recipe_title_written_added"
            app:layout_constraintBottom_toTopOf="@id/recipe_ingredient_lines_written_added"
            android:visibility="gone"
            android:backgroundTint="@color/color_primary"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipe_ingredient_lines_written_added"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/recipe_divider_written_added"
            app:layout_constraintBottom_toTopOf="@id/scroll_chip_written_added"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="3dp"
            android:paddingTop="2dp"
            tools:text="@string/ingredients"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            android:visibility="gone"
            />

        <HorizontalScrollView
            android:id="@+id/scroll_chip_written_added"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            app:layout_constraintBottom_toTopOf="@id/recipe_instructions_box_written_added"
            app:layout_constraintTop_toBottomOf="@id/recipe_ingredient_lines_written_added"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="13dp"
            android:visibility="gone">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/recipe_chips_info_written_added"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_breakfast_3_written_added"
                    style="@style/ChipStyle"
                    android:textAppearance="@style/ChipText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_breakfast"
                    android:textSize="13sp"
                    android:visibility="gone"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_brunch_3_written_added"
                    style="@style/ChipStyle"
                    android:textAppearance="@style/ChipText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_brunch"
                    android:textSize="13sp"
                    android:visibility="gone"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_lunch_3_written_added"
                    style="@style/ChipStyle"
                    android:textAppearance="@style/ChipText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_lunch"
                    android:textSize="13sp"
                    android:visibility="gone"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_snack_3_written_added"
                    style="@style/ChipStyle"
                    android:textAppearance="@style/ChipText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_snack"
                    android:textSize="13sp"
                    android:visibility="gone"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_teatime_written_added"
                    style="@style/ChipStyle"
                    android:textAppearance="@style/ChipText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_teatime"
                    android:textSize="13sp"
                    android:visibility="gone"
                    />
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/recipe_instructions_box_written_added"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="13dp"
            android:paddingTop="2dp"
            app:layout_constraintTop_toBottomOf="@id/scroll_chip_written_added"
            app:layout_constraintBottom_toTopOf="@id/api_fab_written_added"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/recipe_instructions_label_written_added"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_written_instructions_2"
                app:layout_constraintBottom_toTopOf="@id/recipe_instructions_written_added"
                android:textSize="15sp"
                android:fontFamily="@font/comfortaa"
                />

            <TextView
                android:id="@+id/recipe_instructions_written_added"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/recipe_instructions_label_written_added"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="15sp"
                android:fontFamily="@font/comfortaa"
                />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/api_fab_written_added"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_baseline_delete_outline_24"
            app:fabSize="mini"
            android:text="@string/fab_add"
            app:layout_constraintTop_toBottomOf="@id/recipe_instructions_box_written_added"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/iconPlaceholder"
            android:visibility="gone"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>