<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.BackupFragment"
    android:layout_gravity="center_vertical"
    android:background="@drawable/fragment_backup_background"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/card_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="12dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="false"
        app:contentPadding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_inner_box"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            >

            <ImageView
                android:id="@+id/profile_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="13dp"
                android:paddingTop="2dp"
                app:layout_constraintDimensionRatio="1:0.5"
                app:layout_constraintWidth_percent=".923"
                android:contentDescription="@string/iconPlaceholder"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/profile_name"
                />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="13dp"
                android:paddingTop="2dp"
                android:textSize="28sp"
                android:textAlignment="center"
                tools:text="Profile name"
                app:layout_constraintTop_toBottomOf="@id/profile_photo"
                app:layout_constraintBottom_toTopOf="@id/profile_email"
                android:fontFamily="@font/amatic_sc_bold"
                />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="13dp"
                android:layout_marginBottom="3dp"
                android:paddingTop="2dp"
                android:textSize="20sp"
                android:textAlignment="center"
                tools:text="email"
                app:layout_constraintTop_toBottomOf="@id/profile_photo"
                app:layout_constraintBottom_toTopOf="@id/profile_backup"
                android:textColor="@color/element_black"
                android:fontFamily="@font/amatic_sc_bold"
                android:textAllCaps="false"
                />

            <Button
                android:id="@+id/profile_backup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="13dp"
                android:paddingTop="2dp"
                android:text="@string/profile_backup"
                app:layout_constraintTop_toBottomOf="@id/profile_email"
                app:layout_constraintBottom_toTopOf="@id/profile_logout"
                android:textColor="@color/white"
                android:fontFamily="@font/comfortaa"
                android:textAllCaps="false"
                />

            <Button
                android:id="@+id/profile_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="13dp"
                android:paddingTop="2dp"
                android:text="@string/profile_logout_button"
                app:layout_constraintTop_toBottomOf="@id/profile_backup"
                android:textColor="@color/white"
                android:fontFamily="@font/comfortaa"
                android:textAllCaps="false"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>